--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="styling/event(1).css">
 </head>
 <body>
-    <h1>Welcome to MyApp</h1>
+    <h1>welcome to Docker</h1>
 </body>
 </html>
